<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Weather Station</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="initial_temperature_value">-</string>
    <string name="initial_air_pressure_value">-</string>
    <string name="initial_humidity_value">-</string>
    <string name="temperature_label">Temperature</string>
    <string name="air_pressure_label">Air pressure</string>
    <string name="humidity_label">Humidity</string>
    <string name="temperature_unit_degree_celcius">\u2103</string>
    <string name="temperature_unit_degree_fahrenheit">\u2109</string>
    <string name="air_pressure_unit_label">hPa</string>
    <string name="humidity_unit_label">%</string>
    <string name="temperature_icon_description">Temperature icon</string>
    <string name="air_pressure_icon_description">Air pressure icon</string>
    <string name="humidity_icon_description">Humidity icon</string>
    <string name="title_activity_settings">Weather Station - Settings</string>
    <string name="preference_temperature_unit_title">Unit</string>
    <string name="preference_temperature_unit_summary">Select the unit in which temperatures are displayed</string>
    <string name="preference_temperature_unit_key">temperatureUnit</string>
    <string name="preference_temperature_unit_default_value">\u2103</string>

    <array name="preference_temperature_unit_entries">
        <item>\u2103</item>
        <item>\u2109</item>
    </array>

    <string name="preference_temperature_source_title">Sensor source</string>
    <string name="preference_temperature_source_summary">Select the sensor source for the temperature readings</string>
    <string name="preference_temperature_source_key">temperature_source</string>
    <string name="preference_temperature_source_default_value">Ambient</string>

    <array name="preference_temperature_source_entries">
        <item>Ambient</item>
        <item>Object</item>
    </array>

    <string name="preference_theme_title">Select a theme</string>
    <string name="preference_theme_summary">Change the colors of this app by choosing a theme</string>
    <string name="preference_theme_key">theme</string>
    <string name="preference_theme_default_value">Light</string>
    <array name="preference_theme_entries">
        <item>Light</item>
        <item>Dark</item>
    </array>
    
    <string name="preference_keep_screen_on_title">Always keep the screen on</string>
    <string name="preference_keep_screen_on_summary">Ignore the default device settings</string>
    <string name="preference_keep_screen_on_key">keep_screen_on</string>
    <string name="preference_keep_screen_on_default_value">false</string>
    
    <string name="preference_alarm_minimum_temperature_enabled_key">minimumTemperatureAlarmEnabled</string>
    <string name="preference_alarm_minimum_temperature_value_key">minimumTemperatureAlarmValue</string>
    <string name="preference_alarm_maximum_temperature_enabled_key">maximumTemperatureAlarmEnabled</string>
    <string name="preference_alarm_maximum_temperature_value_key">maximumTemperatureAlarmValue</string>
    <string name="preference_maximum_temperature_alarm_title">Maximum temperature alarm</string>
    <string name="preference_maximum_temperature_alarm_summary">Receive a notification when the temperature rises above the defined value</string>
    <string name="maximum_temperature_alarm_notification_title">Temperature alarm!</string>
    <string name="maximum_temperature_alarm_notification_text">%1$s %2$s &gt; maximum of %3$s %4$s</string>
    <string name="preference_minimum_temperature_alarm_title">Minimum temperature alarm</string>
    <string name="preference_minimum_temperature_alarm_summary">Receive a notification when the temperature drops below the defined value</string>
    <string name="minimum_temperature_alarm_notification_title">Temperature alarm!</string>
    <string name="minimum_temperature_alarm_notification_text">%1$s %2$s &lt; minimum of %3$s %4$s</string>

    <string name="preference_category_appearance">Appearance</string>
    <string name="preference_category_temperature">Temperature</string>
    
    <!-- Messages -->
    <string name="bluetooth_le_not_supported">Could not connect to Sensortag because bluetooth LE is not supported by your device</string>
    <string name="bluetooth_not_enabled">Could not connect to Sensortag because bluetooth is not enabled</string>
    <string name="start_le_scan_failed">Failed to connect to TI sensortag</string>
    <string name="sensortag_service_discovery_failed">Failed to connect to TI sensortag</string>
    <string name="failed_to_connect_to_sensortag">Failed to connect to TI sensortag</string>
    <string name="searching_for_sensortag">Connecting to TI sensortag</string>
    <string name="connection_lost_trying_reconnect">Connection with TI sensortag was lost, trying to reconnect</string>

</resources>
