<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:orderingFromXml="true"
    android:persistent="true" >

    <ListPreference
        android:defaultValue="@string/preference_temperature_unit_default_value"
        android:dialogTitle="@string/preference_temperature_unit_title"
        android:entries="@array/preference_temperature_unit_entries"
        android:entryValues="@array/preference_temperature_unit_entries"
        android:key="@string/preference_temperature_unit_key"
        android:summary="@string/preference_temperature_unit_summary"
        android:title="@string/preference_temperature_unit_title" />

   <ListPreference
        android:defaultValue="@string/preference_temperature_source_default_value"
        android:dialogTitle="@string/preference_temperature_source_title"
        android:entries="@array/preference_temperature_source_entries"
        android:entryValues="@array/preference_temperature_source_entries"
        android:key="@string/preference_temperature_source_key"
        android:summary="@string/preference_temperature_source_summary"
        android:title="@string/preference_temperature_source_title" />
    
    <nl.wiegman.weatherstation.preference.MinimumTemperatureAlarmPreference 
        android:title="@string/preference_minimum_temperature_alarm_title" 
        android:summary="@string/preference_minimum_temperature_alarm_summary" />

    <nl.wiegman.weatherstation.preference.MaximumTemperatureAlarmPreference 
        android:title="@string/preference_maximum_temperature_alarm_title" 
        android:summary="@string/preference_maximum_temperature_alarm_summary"/>

</PreferenceScreen>