<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    		xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_sensordata"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/weather_station"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="nl.wiegman.weatherstation.fragment.SensorDataFragment" >

        <ImageView
            android:id="@+id/temperatureImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/temperature_icon_description"
            android:src="@drawable/temperature_black" />

        <TextView
            android:id="@+id/airPressureLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/airPressureImage"
            android:layout_alignRight="@+id/airPressureImage"
            android:layout_below="@+id/airPressureImage"
            android:gravity="center"
            android:layout_marginTop="0dp"
            android:text="@string/air_pressure_label"
            android:textColor="@android:color/black" />

        <ImageView
            android:id="@+id/airPressureImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/view1"
            android:layout_below="@+id/view1"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/air_pressure_icon_description"
            android:src="@drawable/airpressure_black" />

        <View
            android:id="@+id/view1"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_alignLeft="@+id/temperatureLabel"
            android:layout_below="@+id/temperatureLabel"
            android:layout_marginTop="20dp"
            android:background="@android:color/darker_gray" />

        <View
            android:id="@+id/View01"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_alignLeft="@+id/airPressureLabel"
            android:layout_below="@+id/airPressureLabel"
            android:layout_marginTop="15dp"
            android:background="@android:color/darker_gray" />

        <ImageView
            android:id="@+id/humidityImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/View01"
            android:layout_below="@+id/View01"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/humidity_icon_description"
            android:src="@drawable/humidity_black" />

        <TextView
            android:id="@+id/airPressureValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/airPressureLabel"
            android:layout_alignRight="@+id/view1"
            android:text="@string/initial_air_pressure_value"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="@dimen/weatherValueSize" />

        <TextView
            android:id="@+id/humidityValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/View01"
            android:layout_alignTop="@+id/humidityImage"
            android:text="@string/initial_humidity_value"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="@dimen/weatherValueSize" />

        <TextView
            android:id="@+id/temperatureUnitText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/temperatureValue"
            android:layout_alignTop="@+id/temperatureLabel"
            android:text="@string/temperature_unit_degree_celcius"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/airPressureUnitText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/airPressureValue"
            android:layout_alignTop="@+id/airPressureLabel"
            android:text="@string/air_pressure_unit_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/humidityUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/humidityValue"
            android:layout_below="@+id/humidityImage"
            android:text="@string/humidity_unit_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/temperatureValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/temperatureUnitText"
            android:layout_alignRight="@+id/view1"
            android:text="@string/initial_temperature_value"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="@dimen/weatherValueSize" />

        <View
            android:id="@+id/View02"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_alignRight="@+id/humidityUnit"
            android:layout_below="@+id/humidityUnit"
            android:layout_marginTop="10dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/temperatureLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/temperatureImage"
            android:layout_alignRight="@+id/temperatureImage"
            android:layout_below="@+id/temperatureImage"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/temperature_label"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/humidityLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/humidityImage"
            android:layout_alignRight="@+id/humidityImage"
            android:layout_below="@+id/humidityImage"
            android:gravity="center"
            android:text="@string/humidity_label"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/black" />

    </RelativeLayout>

</ScrollView>