<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/fragment_settings"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="nl.wiegman.weatherstation.Settings$PlaceholderFragment" >

    <TextView
        android:id="@+id/temperatureUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/preference_temperature_unit_title"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black" />

    <RadioGroup
        android:id="@+id/temperatureUnitRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/temperatureUnit"
        android:layout_marginRight="22dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radioCelcius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/temperature_unit_degree_celcius" />

        <RadioButton
            android:id="@+id/radioFahrenheit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:text="@string/temperature_unit_degree_fahrenheit" />

    </RadioGroup>

</RelativeLayout>